[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "rlp-0"
version = "0.1.0"
description = "Relational Ledger Protocol - Zero: A minimal state primitive for relational infrastructure"
readme = "README.md"
license = "MIT"
requires-python = ">=3.8"
authors = [
    { name = "NeuroBloom", email = "hello@neurobloom.ai" }
]
keywords = [
    "relational",
    "protocol",
    "state-primitive",
    "coordination",
    "trust",
    "ai-infrastructure"
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[project.urls]
Homepage = "https://neurobloom.ai"
Repository = "https://github.com/neurobloom/rlp-0"
Documentation = "https://github.com/neurobloom/rlp-0#readme"

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
]

[tool.hatch.build.targets.wheel]
packages = ["rlp_0"]

[tool.pytest.ini_options]
testpaths = ["tests"]
